k8s/ideablog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ideablog-ingress
  labels:
    app: ideablog
spec:
  tls:
  - hosts:
    - ideablog.com
    secretName: ideablog-tls-secret
  rules:
  - host: ideablog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ideablog
            port:
              number: 8005
